--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
 </nav> -->
 
 <nav class="navbar phone-navbar-inverse">
-  <!-- <p></p> -->
+  <p>Test commit</p>
   <div class="container-fluid">
 
     <ul class="nav navbar-nav" routerLinkActive="active">
