--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,44 +1,7 @@
-<!-- <nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
 
     <ul class="nav navbar-nav" routerLinkActive="active">
-
-      <li *ngIf="authority === 'user'" class="nav-item">
-        <a class="nav-link" routerLink="user">User Board</a>
-      </li>
-
-      <li *ngIf="authority === 'admin'" class="nav-item">
-        <a class="nav-link" routerLink="admin">Add product</a>
-      </li>
-
-      <li *ngIf="authority === 'admin'" class="nav-item">
-        <a class="nav-link" routerLink="all-admin-products">All Products</a>
-      </li>
-
-      <li *ngIf="authority === 'pm'" class="nav-item">
-        <a class="nav-link" routerLink="pm">PM Board</a>
-      </li>
-
-      <li *ngIf="!authority" class="nav-item">
-        <a class="nav-link" routerLink="auth/login">Login</a>
-      </li>
-    </ul>
-
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Profile</a>
-    </div>
-  </div>
-</nav> -->
-
-<nav class="navbar phone-navbar-inverse">
-  <p>Test commit</p>
-  <div class="container-fluid">
-
-    <ul class="nav navbar-nav" routerLinkActive="active">
-
-      <!-- <li class="nav-item">
-        <a class="nav-link ddd" routerLink="home">Home</a>
-      </li> -->
 
       <li *ngIf="authority === 'user'" class="nav-item">
         <a class="nav-link" routerLink="user">User Board</a>
@@ -66,6 +29,46 @@
     </div>
   </div>
 </nav>
+
+<nav class="navbar phone-navbar-inverse">
+  <div class="container-fluid">
+    <div class="btn-menu" (click)="showPhoneContainer=!showPhoneContainer">
+      <div [ngClass]="{ 'line-top': showPhoneContainer, 'not-line-top': !showPhoneContainer }"></div>
+      <div [ngClass]="{ 'line-between': showPhoneContainer, 'not-line-between': !showPhoneContainer}"></div>
+      <div [ngClass]="{ 'line-bottom': showPhoneContainer, 'not-line-bottom': !showPhoneContainer }"></div>
+    </div>
+  </div>
+</nav>
+
+<!-- <div class="phone-container"  *ngIf="showPhoneContainer"> -->
+<div [ngClass]="{ 'phone-container': showPhoneContainer, 'not-phone-container': !showPhoneContainer }">
+  <ul class="navbar-nav-phone" routerLinkActive="active">
+
+    <li class="nav-item-phone">
+      <a class="nav-link-phone" href="#">Profile</a>
+    </li>
+
+    <li *ngIf="authority === 'user'" class="nav-item-phone">
+      <a class="nav-link-phone" routerLink="user">User Board</a>
+    </li>
+
+    <li *ngIf="authority === 'admin'" class="nav-item-phone">
+      <a class="nav-link-phone" routerLink="admin">Add product</a>
+    </li>
+
+    <li *ngIf="authority === 'admin'" class="nav-item-phone">
+      <a class="nav-link-phone" routerLink="all-admin-products">All Products</a>
+    </li>
+
+    <li *ngIf="authority === 'pm'" class="nav-item-phone">
+      <a class="nav-link-phone" routerLink="pm">PM Board</a>
+    </li>
+
+    <li *ngIf="!authority" class="nav-item-phone">
+      <a class="nav-link-phone" routerLink="auth/login">Login</a>
+    </li>
+  </ul>
+</div>
 
 <div class="container">
   <router-outlet></router-outlet>
