--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,7 +24,7 @@
       <h2>My Profile</h2>
       <p>Welcome to online store</p>
       <div class="user-info-header">
-        <img src="user-profile.jpg" alt="User profile" class="user-avatar">
+        <!-- <img src="user-profile.jpg" alt="User profile" class="user-avatar"> -->
         <span>Hello, {{info.username}}</span>
       </div>
     </header>
@@ -32,7 +32,7 @@
     <div class="dashboard-cards">
       <div class="profile-card">
         <div class="profile-header">
-          <img src="user-profile.jpg" alt="User profile" class="profile-avatar">
+          <!-- <img src="user-profile.jpg" alt="User profile" class="profile-avatar"> -->
           <h3>{{info.username}}</h3>
           <p>{{info.email}}</p>
         </div>
