--- a/src/app/admin-all-products/admin-all-products.component.html
+++ b/src/app/admin-all-products/admin-all-products.component.html
@@ -1,12 +1,23 @@
+<form *ngIf="filteredCategories.length > 0">
+  <h4>Categories</h4>
+  <mat-form-field appearance="fill">
+    <mat-label class="label-category">Favorite category</mat-label>
+    <mat-select class="mat-select-panel" [(ngModel)]="selectedValue" name="food">
+      <mat-option *ngFor="let category of filteredCategories" (click)="getCategoriesProducts(category.name)"> {{category.name}} </mat-option>
+    </mat-select>
+  </mat-form-field>
+</form>
+
 <div class="container">
-  <h2>All Products</h2>
-  <input type="text" [(ngModel)]="searchText" (input)="applyFilter()" placeholder="Search products..." class="search-input">
-
-
+  <div class="header-all-products">
+    <h2 *ngIf="showHeader == true">All Products</h2>
+    <input type="text" [(ngModel)]="searchText" (input)="applyFilter()" placeholder="Search products..." class="search-input">
+  </div>
 
   <div *ngIf="filteredProducts.length === 0">
     No products available.
   </div>
+
   <div *ngIf="filteredProducts.length > 0">
     <table class="table table-striped">
       <thead>
@@ -42,18 +53,39 @@
 </div>
 
 
-<h4>mat select</h4>
-<mat-form-field>
-  <mat-label>Favorite animal</mat-label>
-  <mat-select [formControl]="animalControl" required>
-    <mat-option>--</mat-option>
-    @for (animal of animals; track animal) {
-      <mat-option [value]="animal">{{animal.name}}</mat-option>
-    }
-  </mat-select>
-  @if (animalControl.hasError('required')) {
-    <mat-error>Please choose an animal</mat-error>
-  }
-  <mat-hint>{{animalControl.value?.sound}}</mat-hint>
-</mat-form-field>
+
+  <!-- <div *ngIf="filteredProducts.length > 0">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>ID</th>
+          <th>Name</th>
+          <th>Price</th>
+          <th>Picture URL</th>
+          <th>Username</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let product of filteredProducts">
+          <td>{{ product.id }}</td>
+          <td>{{ product.name }}</td>
+          <td>{{ product.price }}</td>
+          <td><img class="admin-products-img" [src]="product.pictureUrl" alt="{{ product.name }}" style="width: 100px; height: auto;"></td>
+          <td>{{ product.username }}</td>
+          <td>
+            <button class="delete-product-btn" (click)="deleteProduct(product.id)">
+              <img class="delete-img" src="https://cdn-icons-png.flaticon.com/128/9790/9790368.png" alt="">
+            </button>
+          </td>
+          <td>
+            <button class="update-product-btn" (click)="openUpdateDialog(product)">
+              <img class="delete-img" src="https://cdn-icons-png.flaticon.com/128/2546/2546743.png" alt="">
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div> -->
+
 
