--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -174,6 +174,8 @@
 .phone-container {
   display: block;
   transition: all 0.9s ease-in-out;
+  position: absolute;
+  z-index: 999;
 }
 
 .not-phone-container {
