--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -28,19 +28,17 @@
         </div>
 
         <div class="form-group mb-4">
-          <label for="category" class="form-label">Category</label>
-          <input type="number" class="form-control form-control-lg" id="category" name="category" ngModel required placeholder="Enter category ID">
-          <div *ngIf="productForm.submitted && productForm.controls['category']?.invalid" class="text-danger">
+          <label for="categoryCode" class="form-label">Select a category</label>
+          <select class="form-control form-control-lg" id="categoryCode" name="categoryCode" [(ngModel)] = "categoryCode">
+            <option *ngFor="let category of filteredCategories" [value]="category.categoryCode">
+              {{ category.name }}  (Код категории: {{category.categoryCode}})
+            </option>
+          </select>
+
+          <div *ngIf="productForm.submitted && productForm.controls['categoryCode'].value == undefined" class="text-danger">
             Category is required
           </div>
         </div>
-        <!-- <div class="form-group mb-4">
-          <label for="category" class="form-label">Category</label>
-          <input type="number" class="form-control form-control-lg" id="category" name="category" ngModel required placeholder="Enter picture category">
-          <div *ngIf="productForm.submitted && productForm.controls['category']?.invalid" class="text-danger">
-            Category is required
-          </div>
-        </div> -->
 
         <button type="submit" class="btn btn-primary btn-lg w-100 shadow-sm">Submit</button>
       </form>
