--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,14 @@
       <li *ngIf="authority === 'admin'" class="nav-item">
         <a class="nav-link" routerLink="all-admin-products">All Products</a>
       </li>
+      <li class="nav-link" style="margin-left: 20px;">|</li>
+      <li *ngIf="authority === 'admin'" class="nav-item">
+        <a class="nav-link" routerLink="create-category">Create category</a>
+      </li>
+
+      <li *ngIf="authority === 'admin'" class="nav-item">
+        <a class="nav-link" routerLink="all-categories">All categories</a>
+      </li>
 
       <li *ngIf="authority === 'pm'" class="nav-item">
         <a class="nav-link" routerLink="pm">PM Board</a>
@@ -54,6 +62,10 @@
 
     <li *ngIf="authority === 'admin'" class="nav-item-phone">
       <a class="nav-link-phone" routerLink="admin">Add product</a>
+    </li>
+
+    <li *ngIf="authority === 'admin'" class="nav-item-phone">
+      <a class="nav-link-phone" routerLink="admin">Create category</a>
     </li>
 
     <li *ngIf="authority === 'admin'" class="nav-item-phone">
