--- a/src/app/update-product-dialog/update-product-dialog.component.html
+++ b/src/app/update-product-dialog/update-product-dialog.component.html
@@ -14,6 +14,21 @@
       <mat-label>Picture URL</mat-label>
       <input matInput [(ngModel)]="updatedProductData.pictureUrl">
     </mat-form-field>
+    <!-- <mat-form-field> -->
+      <!-- <mat-label>Category Code</mat-label> -->
+      <!-- <input matInput [(ngModel)]="updatedProductData.category.categoryCode"> -->
+
+
+      <div class="form-group mb-4">
+        <label for="categoryCode" class="form-label">Select a category</label>
+        <select class="form-control form-control-lg" id="categoryCode" name="categoryCode" [(ngModel)]="updatedProductData.category.categoryCode">
+          <option *ngFor="let category of filteredCategories" [value]="category?.categoryCode">
+            {{ category.name }}
+          </option>
+        </select>
+      </div>
+
+    <!-- </mat-form-field> -->
   </div>
   <div mat-dialog-actions>
     <button mat-button (click)="onNoClick()">Cancel</button>
