--- a/src/app/admin-images/admin-images.component.css
+++ b/src/app/admin-images/admin-images.component.css
@@ -27,7 +27,7 @@
 .image-item {
   flex: 1 1 auto; /* разрешает элементам изменяться и переходить на новую строку */
   max-width: 175px; /* максимальная ширина для изображения */
-  display: flex;
+  display: ruby;
   flex-direction: column;
   align-items: center;
 }
@@ -39,24 +39,26 @@
 }
 
 .image-item button {
-  margin-top: 5px;
+  margin-top: 15px;
   transition: transform 0.2s ease; /* Добавляет плавный переход */
 }
 
 .delete-product-btn, .update-product-btn {
-  /* border: 1px solid #343a40; */
   border: none;
   box-shadow: 0px 5px 10px 2px rgba(49, 49, 49, 0.2);
   background: none;
   border-radius: 5px;
 }
 
-.delete-product-btn:hover {
-  border-color: red;
+.update-product-btn {
+  margin-left: 20px;
+}
+
+.delete-product-btn:hover, .update-product-btn:hover {
   transform: scale(1.1); /* Увеличивает кнопку при наведении */
 }
 
-.delete-product-btn:active {
+.delete-product-btn:active, .update-product-btn:active {
   transform: scale(0.9); /* Уменьшает кнопку при нажатии */
 }
 
@@ -64,3 +66,12 @@
   width: 45px;
   height: 45px;
 }
+
+.carousel-item img {
+  width: 100%;
+  height: 350px;
+  object-fit: cover;
+  margin-top: 50px;
+  border-radius: 10px;
+}
+
